# wrily

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .wrily.yml.example  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrily
.github/: dependabot.yml
rig-harness/: Cargo.toml  build.rs
rig-harness/docs/decisions/: 0001-cursor-provider.md  0002-skill-resolver.md  0003-team-mode-prompts.md
rig-harness/evals/: Cargo.toml  README.md  baseline.json  smoke.md
rig-harness/evals/fixtures/001-sql-injection/: diff.patch  expected.json  prompt.txt
rig-harness/evals/fixtures/002-delta-clean/: diff.patch  expected.json  prompt.txt
rig-harness/evals/fixtures/003-team-mode-multi-dir/: diff.patch  expected.json  prompt.txt
rig-harness/evals/fixtures/004-budget-trip/: diff.patch  expected.json  prompt.txt
rig-harness/evals/src/: assertions.rs  cost.rs  expected.rs  harness.rs  lib.rs  runner.rs
rig-harness/evals/tests/: assertions_test.rs  cost_test.rs  runner_test.rs
rig-harness/src/: cancel.rs  cli.rs  emitter.rs  events.rs  lib.rs  main.rs  meter.rs  skills.rs  tracing_setup.rs
rig-harness/src/mode/: mod.rs  single.rs  team.rs
rig-harness/src/provider/: anthropic.rs  cursor.rs  gemini.rs  mod.rs  openai.rs  retry.rs  rig_convert.rs
rig-harness/src/tools/: find_files.rs  git_diff.rs  list_files.rs  mod.rs  read_file.rs  registry.rs  shell.rs  skill_load.rs  subagent.rs  truncate.rs
rig-harness/tests/: cancel_test.rs  cli_test.rs  emitter_concurrency.rs  events_roundtrip.rs  integration_single.rs  integration_team.rs  main_exit_codes_test.rs  meter_test.rs  provider_anthropic_test.rs  provider_cursor_test.rs  provider_gemini_test.rs  provider_openai_test.rs  provider_routing.rs  single_mode_test.rs  skills_test.rs  subagent_test.rs  team_mode_test.rs  tool_find_files_test.rs  tool_git_diff_test.rs  tool_list_files_test.rs  tool_read_file_test.rs  tool_registry_test.rs  tool_shell_test.rs  tool_skill_load_test.rs  tracing_panic.rs
rig-harness/tests/fixtures/cursor/: composer-2.5-parallel-tools.jsonl  composer-2.5-turn.jsonl
(+187 files in other folders)
