[workspace]
members = [".", "evals"]
resolver = "2"

[package]
name = "wrily-rig"
version = "0.1.0"
edition = "2021"

[lib]
name = "wrily_rig"
path = "src/lib.rs"

[[bin]]
name = "wrily-rig"
path = "src/main.rs"

[dependencies]
rig-core = "0.37.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
wrily-rig-evals = { path = "evals" }
