[package]
name = "wrily-rig-evals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
wrily-rig = { path = ".." }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
wrily-rig = { path = ".." }
